--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,95 @@ article {
     padding: 3em;
 }
 
+h1 {
+    font-size: 10em;
+    text-transform: uppercase; 
+    text-align: center; 
+}
+
+
+/*First Frame*/
+.char1, .char8, .char11 {
+    background: orange;
+    box-shadow: inset 0 0 8px #fff;
+    display: inline-block; 
+    padding: .25em;
+    border-bottom: 5px solid #fff;
+    
+    transition: transform .5s;
+}
+
+.char8 {
+    letter-spacing: -10px;
+}
+
+
+/*Last Frame*/
+
+
+
+
+.char1:hover {
+    transform: rotate(-15deg);
+}
+
+.char8:hover {
+    transform: rotate(-30deg);
+}
+
+.char11:hover {
+    transform: rotate(45deg);
+}
+
+/*Keyframe Animation*/
+
+@keyframes rubberBand {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    -webkit-transform: scale3d(.95, 1.05, 1);
+    transform: scale3d(.95, 1.05, 1);
+  }
+
+  75% {
+    -webkit-transform: scale3d(1.05, .95, 1);
+    transform: scale3d(1.05, .95, 1);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.rubberBand {
+  -webkit-animation-name: rubberBand;
+  animation-name: rubberBand;
+}
+
+img:hover {
+    padding: 1em;    
+}
+
+
 
 /********************
 MEDIA QUERIES
