--- a/css/styles.css
+++ b/css/styles.css
@@ -2,27 +2,60 @@
 YOUR STYLES
 *******************/
 
+    
 article {
-    background: gray; 
+    background: url("..img/bg.jpg"); 
     margin: 0 auto; 
     padding: 3em;
 }
 
 h1 {
-    font-size: 10em;
+    font-size: 5em;
     text-transform: uppercase; 
     text-align: center; 
+    
 }
 
+p {
+    background: black; 
+    text-align: center;
+    color: white; 
+    margin-right: 20em;
+    margin-left: 20em;
+}
+
+h3 {
+    color: #20b2aa;
+    text-align: center; 
+    font-size: 2em;
+    background: black;
+    margin-right: 10em;
+    margin-left: 10em; 
+}
+
+a {
+    color: white; 
+}
+
+a:hover {
+    color: #20b2aa;
+}
+
+li {
+    background: black; 
+    text-align: center; 
+    list-style: none; 
+    margin-right: 21em; 
+    margin-left: 18em; 
+}
 
 /*First Frame*/
 .char1, .char8, .char11 {
-    background: orange;
+    background: #20b2aa;
     box-shadow: inset 0 0 8px #fff;
     display: inline-block; 
     padding: .25em;
     border-bottom: 5px solid #fff;
-    
     transition: transform .5s;
 }
 
@@ -92,9 +125,16 @@ h1 {
   animation-name: rubberBand;
 }
 
-img:hover {
-    padding: 1em;    
+img {
+    display: block; 
+    width: 300px;
+    height: 400px; 
+    margin-left: auto;
+    margin-right: auto; 
 }
+
+
+
 
 
 
